add support for jdk16